# gpu-kernel-test

./: .gitignore  CMakeLists.txt  README.md  main.cu
resource_manager/: daemon.cu  gpu_alloc.cpp  resource_manager.cu  resource_manager.h
utils/: memory_simulator.py
